# Advent-of-Code

./: .gitignore  README.md
21/src/: lib.rs
22/src/: lib.rs
Ocaml22/: dune-project
Ocaml22/lib/: dune
Ocaml22/test/: dune
aoc24/: dune-project
aoc24/lib/: dune
aoc24/test/: dune
aoc25/: template
aoc25/lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  dune  util.ml
ec25/: dune-project
ec25/lib/: dune
ec25/test/: dune
ocaml_22/: dune-project
ocaml_22/lib/: aoc.ml  day1.ml  dune
ocaml_22/test/: dune
