(lang dune 3.16)

(name aoc24)

(generate_opam_files true)

(source
 (github jrmo14/Advent-of-Code))

(authors "jrmo14")

(license LICENSE)

(package
 (name aoc24)
 (synopsis "Advent of code '24")
 (description "Ocaml solutions for advent of code '24")
 (depends ocaml dune)
 (tags
  (topics "Advent of code" "aoc24")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
